@@ -484,3 +484,5 @@ Version 1.7.9
 * --ref-map is not a required parameter now when --disable_mapping is used
 * Create dataset and compute saturation steps are only performed if the annotated
 file is present
+* Fixed bug in merge_fastq
+* Fixed bugs in st_qa
